src/styles/main.scss
$sec: #4B5664;
$purple: #54516A;
$cut: 768px;
$rhlgray: #2D2E2D;
$rhlorange: #FF8800;
$main: $rhlgray;

@import url('https://fonts.googleapis.com/css?family=Montserrat');

body {
  margin: 0;
  font-family: 'Montserrat', sans-serif;
}

@-webkit-keyframes pulse {
    from {
        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
        filter: alpha(opacity=40);
        opacity: .4;
        top: 0;
    }
    50% {
        -ms-filter: none;
        -webkit-filter: none;
        filter: none;
        opacity: 1;
        top: -10px;
    }
    to {
        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
        filter: alpha(opacity=40);
        opacity: .4;
        top: 0;
    }
}

@keyframes pulse {
    from {
        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
        filter: alpha(opacity=40);
        opacity: .4;
        top: 0
    }
    50% {
        -ms-filter: none;
        -webkit-filter: none;
        filter: none;
        opacity: 1;
        top: -10px
    }
    to {
        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
        filter: alpha(opacity=40);
        opacity: .4;
        top: 0
    }
}

.icons-header {
  display: flex;
  justify-content: center;
  text-align: center;
  .icon {
    text-align: center;
    color: #FFF;
    width: 20px;
    height: 20px;
    font-size: 20px;
    padding: 10px;
    margin: 2px;
    border-radius: 50%;
    border: 2px solid #FFF;
    transition: all .7s;
    &:hover {
      color: $main;
      background: #FFF;
    }
    &:active {
      color: $main;
      background: #FFF;
    }
    @media only screen and (min-width:$cut) {
      width: 35px;
      height: 35px;
      font-size: 35px;
    }
  }
}

.user {
  text-align: center;
  margin: 20px auto;
  font-size: 60px;
  p {
    font-size: 16px;
  }
  @media only screen and (min-width: $cut) {
    font-size: 75px;
  }

}

.user-details {
  text-align: center;
  font-size: 16px;
  margin: 10px auto;
}

.user-projects {
  margin: 40px auto;
  img {
    max-width: 100%;
    height: auto;
    border-radius: 5px;
  }
  h5 {
    margin: 0;
  }
  li {
    color: $main;
    font-size: 1.1rem;
  }
  p {
    margin-right: 5px;
  }
}

.images {
  @media only screen and (min-width: $cut) {
    float: right;
  }
}

.project-link {
  display: block;
  width: 150px;
  // margin: 10px 0px;
  // padding: 5px;
  cursor: pointer;
  transition: color 0.3s ease-out,
              background-color 0.3s ease-out,
              border-color 0.3s ease-out;
  &:hover {
    background-color: $rhlgray;
    border-color: $rhlgray;
    color: #fff;
    transition: color 0.3s ease-in,
                background-color 0.3s ease-in,
                border-color 0.3s ease-in;
  }
  &:active {
    background-color: $rhlgray;
    border-color: $rhlgray;
    color: #fff;
    transition: color 0.3s ease-in,
                background-color 0.3s ease-in,
                border-color 0.3s ease-in;
  }
}

.center {
    text-align: center;
}

#footer {
  background: $main;
  padding: 10px 0;
  margin-top: 0px;
  text-align: center;
  color: #FFF;
  .love {
    color: red;
  }
  a {
    text-decoration: none;
    margin: 0;
    color: #FFF;
    &:hover{
      color: $sec;
    }
    &:active {
      color: $sec;
    }
  }
}


#header {
  top: 0;
  left: 0;
  right: 0;
  background: $rhlgray;
  color: $rhlorange;
  height: 3em;
  line-height: 3em;
  position: fixed;
  width: 100%;
  z-index: 100;

  h1 {
    height: 2em;
    line-height: inherit;
    font-size: 2em;
    display: inline;
    position: absolute;
    margin-left: .5em;
    a {
      text-decoration: none;
      color: $rhlorange;
    }
  }

  #toggle-button {
    float: right;
    color: white;
    margin-right: .5em;
    font-size: 2em;

  }

}

.container {
  margin-top: 3em;
  padding-top: 1em;
}

#meetup {
  font-size: 16px;
  .mup-event {
    padding-bottom: .5em;
  }
  a {
    text-decoration: none;
    color: $rhlorange;
  }
  .mup-dt, .mup-loc {
    font-size: 12px;
    color: #555;
  }
}

@import '_slideout';
@import '_hero';

